@@ -1,5 +1,14 @@
 NEWS
 
+9
+
+ENHACEMENT:
+* New translations
+* Add summary string
+
+BUG_FIX:
+* Fix regression in add custom food code
+
 7
 
 ENHACEMENT:
